fix tap flash on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -24,6 +24,9 @@
 }
 
 @media only screen and (max-width: 420px) {
+    * {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
     .board {
         width: 95%;
         min-width: 280px;
